force-app/main/default/objects/FNS_Address__c/fields/FNS_Account__c.field-meta.xml
<CustomField>
    <fullName>FNS_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Addresses</relationshipLabel>
    <relationshipName>Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>