force-app/main/default/objects/FNS_Address__c/fields/FNS_Address1__c.field-meta.xml
<CustomField>
    <fullName>FNS_Address1__c</fullName>
    <label>Address Line 1</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>