force-app/main/default/objects/FNS_Address__c/fields/FNS_Address2__c.field-meta.xml
<CustomField>
    <fullName>FNS_Address2__c</fullName>
    <description>Address Line 2</description>
    <label>Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>