force-app/main/default/objects/FNS_Address__c/fields/FNS_Address3__c.field-meta.xml
<CustomField>
    <fullName>FNS_Address3__c</fullName>
    <description>Address Line 3</description>
    <label>Address Line 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>