force-app/main/default/objects/FNS_Address__c/fields/FNS_AddressType__c.field-meta.xml
<CustomField>
    <fullName>FNS_AddressType__c</fullName>
    <description>Address Type</description>
    <label>Address Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>O</fullName>
            </value>
            <value>
                <fullName>H</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>