force-app/main/default/objects/FNS_Address__c/fields/FNS_Collateral__c.field-meta.xml
<CustomField>
    <fullName>FNS_Collateral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collateral</label>
    <referenceTo>FNS_Collateral__c</referenceTo>
    <relationshipLabel>Addresses</relationshipLabel>
    <relationshipName>Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>