force-app/main/default/objects/FNS_Address__c/fields/FNS_CountryCode__c.field-meta.xml
<CustomField>
    <fullName>FNS_CountryCode__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FNS_Country</valueSetName>
    </valueSet>
</CustomField>