force-app/main/default/objects/FNS_Address__c/fields/FNS_NonUSAddress__c.field-meta.xml
<CustomField>
    <fullName>FNS_NonUSAddress__c</fullName>
    <label>Non-US Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>