force-app/main/default/objects/FNS_Address__c/fields/FNS_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>FNS_PostalCode__c</fullName>
    <description>Postal Code</description>
    <label>Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>