force-app/main/default/objects/FNS_Address__c/fields/FNS_PostalCodeExtension__c.field-meta.xml
<CustomField>
    <fullName>FNS_PostalCodeExtension__c</fullName>
    <label>Postal Code Extension</label>
    <length>10</length>
    <type>Text</type>
</CustomField>