force-app/main/default/objects/FNS_Address__c/fields/FNS_ProvinceCode__c.field-meta.xml
<CustomField>
    <fullName>FNS_ProvinceCode__c</fullName>
    <label>Province</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FNS_Province</valueSetName>
    </valueSet>
</CustomField>