force-app/main/default/objects/FNS_Address__c/fields/FNS_State__c.field-meta.xml
<CustomField>
    <fullName>FNS_State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FNS_State</valueSetName>
    </valueSet>
</CustomField>