force-app/main/default/objects/FNS_Address__c/fields/FNS_Street__c.field-meta.xml
<CustomField>
    <fullName>FNS_Street__c</fullName>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>