force-app/main/default/objects/FNS_Address__c/recordTypes/FNS_Address.recordType-meta.xml
<RecordType>
    <fullName>FNS_Address</fullName>
    <active>true</active>
    <label>Address</label>
</RecordType>