force-app/main/default/objects/FNS_Address__c/recordTypes/FNS_AddressReadOnly.recordType-meta.xml
<RecordType>
    <fullName>FNS_AddressReadOnly</fullName>
    <active>true</active>
    <label>Address Read Only</label>
</RecordType>