force-app/main/default/objects/FNS_Address__c/listViews/FNS_Address.listView-meta.xml
<ListView>
    <fullName>FNS_Address</fullName>
    <columns>NAME</columns>
    <columns>FNS_Address1__c</columns>
    <columns>FNS_AddressType__c</columns>
    <columns>FNS_CountryCode__c</columns>
    <columns>FNS_PostalCode__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Addresses</label>
</ListView>